  * minor incompatible change: some nonsensical specialized lambda
    lists (used in DEFMETHOD) which were previously ignored now signal
    errors.
  * minor incompatible change: the system is now aware of the types of
    variables in the COMMON-LISP package, and will signal errors for
    most violations of these type constraints (where previously they
    were silently accepted).
  * changes in type checking closed the following bugs:
    ** type checking of unused values (192b, 194d, 203);
    ** template selection based on unsafe type assertions (192c, 236);
    ** type checking in branches (194bc).
  * VALUES declaration is disabled.
  * a short form of VALUES type specifier has ANSI meaning.
  * fixed bug in DEFSTRUCT: once again, naming structure slots with
    keywords or constants is permissible.
  * STREAM-READ-SEQUENCE and STREAM-WRITE-SEQUENCE now have methods
    defined on the relevant FUNDAMENTAL-BINARY-{INPUT,OUTPUT}-STREAM
    classes.  (thanks to Antonio Martinez)
  * improved ANSIness in DESCRIBE: The DESCRIBE function no longer
    outputs FRESH-LINE or TERPRI, and no longer converts its stream
    argument to a pretty-print stream. Instead, it leaves any such 
    operations to DESCRIBE-OBJECT methods.
  * bug fix: APROPOS now respects the EXTERNAL-ONLY flag.  (reported
    by Teemu Kalvas)
  * bug fix: NIL is now a valid destructuring argument in DEFMACRO
    lambda lists.  (thanks to David Lichteblau)
  * bug fix: defining a generic function with a :METHOD-CLASS being a
    subclass of STANDARD-METHOD no longer causes stack exhaustion.
    (thanks to Gerd Moellmann)
  * increased compilation speed of long MULTIPLE-VALUES-BIND.
  * a contributed module implementing COMPILER-LET and MACROEXPAND-ALL
    has been included.
  * DEFCONSTANT now throws a condition of type
    SB-EXT:DEFCONSTANT-UNEQL if it is being asked to redefine a
    constant to a non-EQL value; CONTINUE and ABORT restarts
    respectively change and preserve the value.